Fix overflow with parallax elements

--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -20,6 +20,8 @@
   --layer-4: 40;
   --layer-5: 50;
   --layer-10: 100;
+  --layer-11: 110;
+  --layer-12: 120;
 }
 
 /* 
@@ -91,7 +93,7 @@ body  {
   position: fixed;
   top: 0;
   right: 0;
-  z-index: var(--layer-10);
+  z-index: var(--layer-12);
   background-color: var(--white);
   width: calc(var(--unit) * 3);
   height: calc(var(--unit) * 3);
@@ -130,7 +132,7 @@ body  {
   /* background-size: var(--unit) var(--unit); */
   /* background-image: linear-gradient(to right, var(--white) .5px, transparent 0px), linear-gradient(to bottom, var(--white) .5px, transparent 0px); */
   position: fixed; 
-  z-index: var(--layer-2);
+  z-index: var(--layer-11);
 }
 
 ._branding-global {
@@ -278,17 +280,17 @@ body  {
 
 ._image-sign {
   position: absolute;
-  top: calc(var(--unit) * 25);
+  top: calc(var(--unit) * -10);
   left: calc(var(--unit) * 2);
   width: 200px;
   height: auto;
-  z-index: var(--layer-2);
+  z-index: var(--layer-1);
 
 }
 
 ._image-sandy {
   position: absolute;
-  top: calc(var(--unit) * 21);
+  top: calc(var(--unit) * -16);
   left: calc(var(--unit) * 8);
   width: 200px;
   height: auto;
@@ -298,8 +300,8 @@ body  {
 
 ._image-bridge {
   position: absolute;
-  top: calc(var(--unit) * 22);
-  left: calc(var(--unit) * 13);
+  top: calc(var(--unit) * -16);
+  left: calc(var(--unit) * 12);
   width: 180px;
   height: auto;
   z-index: var(--layer-0);
@@ -307,17 +309,17 @@ body  {
 
 ._image-tom {
   position: absolute;
-  top: calc(var(--unit) * 25);
+  top: calc(var(--unit) * -11);
   left: calc(var(--unit) * 12.5);
   width: 120px;
   height: auto;
-  z-index: var(--layer-3);
+  z-index: var(--layer-2);
 }
 
 ._image-tower {
   position: absolute;
-  top: calc(var(--unit) * 24);
-  left: calc(var(--unit) * 15);
+  top: calc(var(--unit) * -13);
+  left: calc(var(--unit) * 14);
   width: 130px;
   height: auto;
   z-index: var(--layer-0);
@@ -325,8 +327,8 @@ body  {
 
 ._blob-purple {
   position: absolute;
-  top: calc(var(--unit) * 21);
-  left: calc(var(--unit) * 10);
+  top: calc(var(--unit) * -13);
+  left: calc(var(--unit) * 8);
   /* width: 80px; */
   z-index: var(--layer-3);
 } 
